// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > should render circle 1`] = `
<body>
  <div>
    <circle
      cx="0"
      cy="0"
      fill="currentColor"
      r="5"
      role="button"
      stroke="currentColor"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`components > should render default 1`] = `
<body>
  <div>
    <path
      d="M 4.80001 0 L 5.92258 3.45491 H 9.55529 L 6.61637 5.59017 L 7.7389399999999995 9.04509 L 4.80001 6.90983 L 1.8610799999999998 9.04509 L 2.98365 5.59017 L 0.0447266 3.45491 H 3.6774400000000003 L 4.80001 0 Z"
      fill="none"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-5,-5)"
    />
  </div>
</body>
`;

exports[`components > should render square 1`] = `
<body>
  <div>
    <rect
      fill="currentColor"
      height="10"
      role="button"
      rx="0.5"
      ry="0.5"
      stroke="currentColor"
      tabindex="0"
      width="10"
      x="-5"
      y="-5"
    />
  </div>
</body>
`;

exports[`components > should render triangle 1`] = `
<body>
  <div>
    <polygon
      fill="currentColor"
      points="0, -5, 4.330127018922193, 2.5, -4.330127018922193, 2.5"
      role="button"
      stroke="currentColor"
      tabindex="0"
    />
  </div>
</body>
`;
